Updated to newest version of elementa and fixed positioning of knob and children

--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ repositories {
 dependencies {
     implementation 'com.electronwill.night-config:toml:3.6.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'com.github.sk1erllc:elementa:d141908245'
+    implementation 'com.github.sk1erllc:Elementa:578cea26e9'
 
     testImplementation "io.mockk:mockk:1.9.3"
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
