--- a/build.gradle
+++ b/build.gradle
@@ -98,3 +98,12 @@ compileKotlin {
         jvmTarget = '1.8'
     }
 }
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives sourcesJar
+}
