--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ repositories {
 dependencies {
     implementation 'com.electronwill.night-config:toml:3.6.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect"
     implementation 'com.github.sk1erllc:Elementa:578cea26e9'
 
     testImplementation "io.mockk:mockk:1.9.3"
