Actually commit gradle wrapper smh

--- a/build.gradle
+++ b/build.gradle
@@ -108,3 +108,7 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 artifacts {
     archives sourcesJar
 }
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '4.10.3'
+}
