--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     implementation 'com.electronwill.night-config:toml:3.6.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect"
-    implementation 'com.github.sk1erllc:Elementa:b6c2533889'
+    implementation 'com.github.sk1erllc:Elementa:536727dd89'
 
     testImplementation "io.mockk:mockk:1.9.3"
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
@@ -113,4 +113,8 @@ artifacts {
 
 task wrapper(type: Wrapper) {
     gradleVersion = '4.10.3'
+}
+
+jar {
+    exclude('club/sk1er/vigilance/example/**')
 }
