--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ archivesBaseName = modBaseName
 sourceCompatibility = targetCompatibility = 1.8
 
 minecraft {
-    version = '1.8.9-11.15.1.1722'
+    version = '1.8.9-11.15.1.2318-1.8.9'
     runDir = "run"
 
     // the mappings can be changed at any time, and must be in the following format.
