--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ repositories {
 dependencies {
     implementation 'com.electronwill.night-config:toml:3.6.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation "org.jetbrains.kotlin:kotlin-reflect"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation 'com.github.sk1erllc:Elementa:759100ffd6'
 
     testImplementation "io.mockk:mockk:1.9.3"
