--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,30 @@ buildscript {
             name = "forge"
             url = "https://files.minecraftforge.net/maven"
         }
+        maven {
+            url = "https://jitpack.io"
+        }
+        flatDir dirs: 'libs'
     }
     dependencies {
-        classpath "net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT"
         classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.9.17"
+        if (project.name == "1.14-fabric") {
+            classpath 'fabric-loom:fabric-loom.gradle.plugin:0.2.2-SNAPSHOT'
+        } else if (project.name == "1.15.2") {
+            classpath('net.minecraftforge.gradle:ForgeGradle:3.+') {
+                exclude group: 'trove', module: 'trove' // preprocessor/idea requires more recent one
+            }
+        } else {
+            classpath('com.github.ReplayMod:ForgeGradle:' + (
+                    project.name == "1.12.2" ? 'd5c13801' : // FG 2.3
+                            'ab81684e'  // FG 2.1
+            )) {
+                exclude group: 'net.sf.trove4j', module: 'trove4j' // preprocessor/idea requires more recent one
+                exclude group: 'trove', module: 'trove' // different name same thing
+            }
+        }
     }
 }
 
@@ -20,45 +38,152 @@ apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: "net.minecraftforge.gradle.forge"
 apply plugin: 'kotlin'
 
-version = modVersion
-group = modGroup
-archivesBaseName = modBaseName
+
+apply plugin: project.name == "1.15.2" ? 'net.minecraftforge.gradle' : 'net.minecraftforge.gradle.forge'
+apply plugin: 'com.replaymod.preprocess'
+mcVersion = project.ext.mcVersion
+
 
 sourceCompatibility = targetCompatibility = 1.8
-
-minecraft {
-    version = '1.8.9-11.15.1.2318-1.8.9'
-    runDir = "run"
-
-    // the mappings can be changed at any time, and must be in the following format.
-    // snapshot_YYYYMMDD   snapshot are built nightly.
-    // stable_#            stables are built at the discretion of the MCP team.
-    // Use non-default mappings at your own risk. they may not always work.
-    // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = project.mcpVersion
-    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
-}
 
 repositories {
     mavenCentral()
     jcenter()
     maven {
+        name = "kryonet"
+        url = "http://clojars.org/repo/"
+    }
+    maven {
+        url = 'https://repository.apache.org/content/repositories/releases/org/apache/xmlgraphics/'
+    }
+    maven { url = 'https://jitpack.io' }
+    maven {
         name = 'sponge'
         url = 'https://repo.spongepowered.org/maven'
     }
-    maven { url 'https://jitpack.io' }
+}
+
+preprocess {
+    vars.put("MC", mcVersion)
+}
+
+
+apply from: '../../sk1erllc_github_packages.gradle'
+version = this.properties.getOrDefault("BUILD_ID", "LOCAL") //BUILD_ID
+group = "club.sk1er" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "Vigilance " + project.name
+
+minecraft {
+    if (!project.name.equals("1.15.2")) {
+        version = [
+                11202: '1.12.2-14.23.0.2486',
+                11201: '1.12.1-14.22.0.2444',
+                11200: '1.12-14.21.1.2387',
+                11102: '1.11.2-13.20.0.2216',
+                11100: '1.11-13.19.1.2188',
+                11002: '1.10.2-12.18.2.2099',
+                10904: '1.9.4-12.17.0.1976',
+                10809: '1.8.9-11.15.1.2318-1.8.9'
+        ][mcVersion]
+        mappings = [
+                11202: "snapshot_20170615",
+                11201: "snapshot_20170615",
+                11200: "snapshot_20170615",
+                11102: "snapshot_20161220",
+                11100: "snapshot_20161111",
+                11002: "snapshot_20160518",
+                10904: "snapshot_20160518",
+                10809: "stable_22"
+        ][mcVersion]
+
+
+        runDir = "run"
+        makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+    } else {
+        mappings channel: 'snapshot', version: '20200220-1.15.1'
+        accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+
+        // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+
+        // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+
+        // Default run configurations.
+        // These can be tweaked, removed, or duplicated as needed.
+        runs {
+            client {
+                workingDirectory project.file('run')
+
+                // Recommended logging data for a userdev environment
+                property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+
+                // Recommended logging level for the console
+                property 'forge.logging.console.level', 'debug'
+
+                mods {
+                    examplemod {
+                        source sourceSets.main
+                    }
+                }
+            }
+
+            server {
+                workingDirectory project.file('run')
+
+                // Recommended logging data for a userdev environment
+                property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+
+                // Recommended logging level for the console
+                property 'forge.logging.console.level', 'debug'
+
+                mods {
+                    examplemod {
+                        source sourceSets.main
+                    }
+                }
+            }
+
+            data {
+                workingDirectory project.file('run')
+
+                // Recommended logging data for a userdev environment
+                property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+
+                // Recommended logging level for the console
+                property 'forge.logging.console.level', 'debug'
+
+                args '--mod', 'examplemod', '--all', '--output', file('src/generated/resources/')
+
+                mods {
+                    examplemod {
+                        source sourceSets.main
+                    }
+                }
+            }
+        }
+    }
+
+}
+
+configurations {
+    embed
+    compile.extendsFrom(embed)
 }
 
 dependencies {
     implementation 'com.electronwill.night-config:toml:3.6.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation 'com.github.sk1erllc:Elementa:759100ffd6'
 
     testImplementation "io.mockk:mockk:1.9.3"
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
     testImplementation "io.strikt:strikt-core:0.22.1"
+
+    if (mcVersion == 11502) {
+        minecraft 'net.minecraftforge:forge:1.15.2-31.1.18'
+    }
+    provided files("../../libs/UniversalCraft" + mcVersion + ".jar")
+    provided files("../../libs/Elementa" + mcVersion + ".jar")
 }
 
 processResources {
