Add Sk1er repo to repositories

--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,9 @@ repositories {
         name = 'sponge'
         url = 'https://repo.spongepowered.org/maven'
     }
+    maven {
+        url = "https://repo.sk1er.club/repository/maven-releases"
+    }
 }
 
 preprocess {
