--- a/build.gradle
+++ b/build.gradle
@@ -69,7 +69,7 @@ preprocess {
     vars.put("MC", mcVersion)
 }
 
-
+apply plugin: 'maven'
 apply from: '../../sk1erllc_github_packages.gradle'
 version = this.properties.getOrDefault("BUILD_ID", "LOCAL") //BUILD_ID
 group = "club.sk1er" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
