--- a/build.gradle
+++ b/build.gradle
@@ -69,13 +69,13 @@ preprocess {
 }
 
 apply plugin: 'maven'
-apply from: '../../sk1erllc_github_packages.gradle'
+
 version = this.properties.getOrDefault("BUILD_ID", "LOCAL") //BUILD_ID
 group = "club.sk1er" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "Vigilance" + project.name
 
 minecraft {
-    if (!project.name.equals("1.15.2")) {
+    if (project.name != "1.15.2") {
         version = [
                 11202: '1.12.2-14.23.0.2486',
                 11201: '1.12.1-14.22.0.2444',
@@ -162,7 +162,6 @@ minecraft {
             }
         }
     }
-
 }
 
 configurations {
@@ -174,7 +173,7 @@ dependencies {
     implementation 'com.electronwill.night-config:toml:3.6.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation "club.sk1er:Elementa:4-$mcVersion"
+    implementation "club.sk1er:Elementa:1.5.0-$mcVersion"
     implementation "club.sk1er:UniversalCraft:25-$mcVersion"
 
     testImplementation "io.mockk:mockk:1.9.3"
@@ -255,7 +254,7 @@ publishing {
                 def dependenciesNode = asNode().appendNode('dependencies')
 
                 configurations.implementation.allDependencies.each {
-                    if (it.group != null && (it.name != null || "unspecified" == it.name) && it.version != null) {
+                    if (it.group != null && it.name != null && it.name != "forge" && it.version != null) {
                         def dependencyNode = dependenciesNode.appendNode('dependency')
                         dependencyNode.appendNode('groupId', it.group)
                         dependencyNode.appendNode('artifactId', it.name)
