--- a/build.gradle
+++ b/build.gradle
@@ -171,7 +171,7 @@ dependencies {
     implementation 'com.electronwill.night-config:toml:3.6.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation ("club.sk1er:Elementa:new-versions-10-$mcVersion-SNAPSHOT") {
+    implementation ("club.sk1er:Elementa:143-$mcVersion-SNAPSHOT") {
         exclude group: 'UniversalCraft'
     }
     implementation "club.sk1er:UniversalCraft:new-versions-18-$mcVersion-SNAPSHOT"
