--- a/build.gradle
+++ b/build.gradle
@@ -171,7 +171,7 @@ dependencies {
     implementation 'com.electronwill.night-config:toml:3.6.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation ("club.sk1er:Elementa:154-$mcVersion-SNAPSHOT") {
+    implementation ("club.sk1er:Elementa:158-$mcVersion-SNAPSHOT") {
         exclude group: 'UniversalCraft'
     }
     implementation "club.sk1er:UniversalCraft:74-$mcVersion-SNAPSHOT"
@@ -282,6 +282,7 @@ task wrapper(type: Wrapper) {
 }
 
 jar {
+    exclude('club/sk1er/vigilance/example/**')
     manifest {
         attributes(
             'FMLModType': 'LIBRARY'
