--- a/build.gradle
+++ b/build.gradle
@@ -171,8 +171,10 @@ dependencies {
     implementation 'com.electronwill.night-config:toml:3.6.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation ("club.sk1er:Elementa:196-$mcVersion-SNAPSHOT") {
-        exclude group: 'UniversalCraft'
+    implementation ("club.sk1er:Elementa:205-$mcVersion-SNAPSHOT") {
+        exclude module: 'UniversalCraft'
+        exclude module: 'kotlin-reflect'
+        exclude module: 'kotlin-stdlib-jdk8'
     }
     implementation "club.sk1er:UniversalCraft:96-$mcVersion-SNAPSHOT"
 
