Build: Resolve example not being excluded from built jar

--- a/build.gradle
+++ b/build.gradle
@@ -264,7 +264,7 @@ task wrapper(type: Wrapper) {
 jar {
     exclude 'META-INF/INDEX.LIST', 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA', 'module-info.class'
 
-    exclude('com/example/examplemod/**')
+    exclude('club/sk1er/vigilance/example/**')
     exclude("META-INF/mods.toml")
     exclude("mods.toml")
     exclude("kotlin/**")
