--- a/build.gradle
+++ b/build.gradle
@@ -143,12 +143,12 @@ dependencies {
     implementation 'com.electronwill.night-config:toml:3.6.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation("club.sk1er:Elementa:273-$mcVersion-SNAPSHOT") {
+    implementation("gg.essential:Elementa:276-$mcVersion-SNAPSHOT") {
         exclude module: 'UniversalCraft'
         exclude module: 'kotlin-reflect'
         exclude module: 'kotlin-stdlib-jdk8'
     }
-    implementation "club.sk1er:UniversalCraft:108-$mcVersion-SNAPSHOT"
+    implementation "gg.essential:UniversalCraft:111-$mcVersion-SNAPSHOT"
 
     testImplementation "io.mockk:mockk:1.9.3"
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
