--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = "1.3.72"
+    ext.kotlin_version = "1.5.0"
 
     def mcVersion
     def (major, minor, patch) = project.name.tokenize('-')[0].tokenize('.')
@@ -143,7 +143,7 @@ dependencies {
     implementation 'com.electronwill.night-config:toml:3.6.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation("gg.essential:Elementa:300-$mcVersion-SNAPSHOT") {
+    implementation("gg.essential:Elementa:next-303-$mcVersion-SNAPSHOT") {
         exclude module: 'kotlin-reflect'
         exclude module: 'kotlin-stdlib-jdk8'
     }
