--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     project.ext.forge = !fabric
 
     repositories {
+        mavenCentral()
         maven { url "https://maven.fabricmc.net/" }
         if (!fabric) maven { url "https://files.minecraftforge.net/maven" }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
@@ -139,11 +140,23 @@ if (FABRIC) {
     }
 }
 
+if (!FABRIC) {
+    configurations {
+        modApi
+        api.extendsFrom(modApi)
+        modImplementation
+        implementation.extendsFrom(modImplementation)
+    }
+}
+
 dependencies {
-    implementation 'com.electronwill.night-config:toml:3.6.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation("gg.essential:Elementa:next-303-$mcVersion-SNAPSHOT") {
+    // Using the "mod" prefix will allow Loom to automatically remap the dependencies (to configured yarn mappings) and
+    // to configure the maven publication such that we externally still depend on the non-remapped dep.
+    // The Api/Implementation difference is the same as in Gradle.
+    modImplementation('com.electronwill.night-config:toml:3.6.0')
+    modImplementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version")
+    modImplementation("org.jetbrains.kotlin:kotlin-reflect:$kotlin_version")
+    modApi("gg.essential:Elementa:next-305-$mcVersion${FABRIC ? "-fabric" : ""}-SNAPSHOT") {
         exclude module: 'kotlin-reflect'
         exclude module: 'kotlin-stdlib-jdk8'
     }
@@ -166,7 +179,7 @@ dependencies {
                 11601: '1.16.1+build.17:v2',
                 11602: '1.16.2+build.1:v2',
         ][mcVersion]
-        modCompile 'net.fabricmc:fabric-loader:' + [
+        modImplementation 'net.fabricmc:fabric-loader:' + [
                 11404: '0.7.8+build.189',
                 11502: '0.7.8+build.189',
                 11601: '0.8.8+build.202',
@@ -183,13 +196,15 @@ dependencies {
                 "networking-v0",
                 "keybindings-v0",
                 "resource-loader-v0",
+                "command-api-v1",
+                "lifecycle-events-v1",
         ]
         if (mcVersion >= 11600) {
             fabricApiModules.add("key-binding-api-v1")
         }
         fabricApiModules.each { module ->
-            modCompile fabricApi.module("fabric-$module", fabricApiVersion)
-            include fabricApi.module("fabric-$module", fabricApiVersion)
+            // Using this combo to add it to our deps but not to our maven publication cause it's only for the example
+            modRuntime(modCompileOnly(fabricApi.module("fabric-$module", fabricApiVersion)))
         }
     }
 
@@ -203,8 +218,10 @@ dependencies {
 }
 
 processResources {
-    from(sourceSets.main.resources.srcDirs) {
-        include "mcmod.info"
+    inputs.property "version", project.version
+
+    filesMatching(['fabric.mod.json']) {
+        expand 'version': project.version
     }
 
     from(sourceSets.main.resources.srcDirs) {
@@ -258,6 +275,7 @@ publishing {
             def snapshotStr = this.properties.getOrDefault("IS_CI", false) ? "-SNAPSHOT" : ""
             version = "$branchStr${project.version}-$mcVersion$fabricStr$snapshotStr"
 
+            if (!FABRIC) // handled by Loom
             pom.withXml {
                 def dependenciesNode = asNode().appendNode('dependencies')
 
@@ -271,8 +289,17 @@ publishing {
                 }
             }
 
-            artifact jar
-            artifact sourcesJar
+            if (FABRIC) {
+                artifact(remapJar) {
+                    builtBy remapJar
+                }
+                artifact(sourcesJar) {
+                    builtBy remapSourcesJar
+                }
+            } else {
+                artifact jar
+                artifact sourcesJar
+            }
         }
     }
 
