--- a/build.gradle
+++ b/build.gradle
@@ -20,17 +20,16 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.9.17"
         if (fabric) {
-            classpath 'fabric-loom:fabric-loom.gradle.plugin:0.4-SNAPSHOT'
+            classpath 'fabric-loom:fabric-loom.gradle.plugin:0.8-SNAPSHOT'
         } else if (mcVersion >= 11400) {
-            classpath('net.minecraftforge.gradle:ForgeGradle:4.+') {
+            classpath('net.minecraftforge.gradle:ForgeGradle:5.0.5') { // later versions emit tsrg2
                 exclude group: 'trove', module: 'trove' // preprocessor/idea requires more recent one
             }
         } else {
-            classpath('com.github.ReplayMod:ForgeGradle:' + (
-                    mcVersion >= 11200 ? '541e1485' : // FG 2.3
-                            mcVersion >= 10904 ? '5c1f53dc' : // FG 2.2
-                                    '48c4f0c6'   // FG 2.1
-            ) + ':all') {
+            def forgeGradleVersion = mcVersion >= 11200 ? '34ab703' : // FG 2.3
+                                     mcVersion >= 10904 ? '5d1e8d8' : // FG 2.2
+                                                          'd1a7165'   // FG 2.1
+            classpath("com.github.ReplayMod:ForgeGradle:$forgeGradleVersion:all") {
                 exclude group: 'net.sf.trove4j', module: 'trove4j' // preprocessor/idea requires more recent one
                 exclude group: 'trove', module: 'trove' // different name same thing
             }
@@ -52,7 +51,6 @@ if (FABRIC) {
 apply plugin: 'kotlin'
 apply plugin: 'maven-publish'
 apply plugin: 'com.replaymod.preprocess'
-apply plugin: 'maven'
 
 sourceCompatibility = targetCompatibility = 1.8
 
@@ -82,7 +80,9 @@ if (mcVersion >= 11400) {
 if (FABRIC) {
     minecraft {
         refmapName = 'mixins.replaymod.refmap.json'
-        autoGenIDERuns = true
+        runConfigs.all {
+            ideConfigGenerated = true
+        }
     }
 } else {
     minecraft {
