--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
 buildscript {
     ext.kotlin_version = "1.5.10"
 
-    def mcVersion
-    def (major, minor, patch) = project.name.tokenize('-')[0].tokenize('.')
-    mcVersion = "${major}${minor.padLeft(2, '0')}${(patch ?: '').padLeft(2, '0')}" as int
+    def mcVersionStr = project.name.tokenize('-')[0]
+    def (major, minor, patch) = mcVersionStr.tokenize('.')
+    def mcVersion = "${major}${minor.padLeft(2, '0')}${(patch ?: '').padLeft(2, '0')}" as int
     def fabric = mcVersion >= 11400 && project.name.endsWith("-fabric")
     project.ext.mcVersion = mcVersion
+    project.ext.mcVersionStr = mcVersionStr
+    project.ext.mcPlatform = fabric ? 'fabric' : 'forge'
     project.ext.fabric = fabric
     project.ext.forge = !fabric
 
@@ -68,7 +70,7 @@ preprocess {
     vars.put("FORGE", forge ? 1 : 0)
 }
 
-version = this.properties.getOrDefault("BUILD_ID", "LOCAL") //BUILD_ID
+version = project.parent.version
 group = "gg.essential" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "Vigilance" + project.name
 
@@ -143,7 +145,7 @@ dependencies {
     implementation 'com.electronwill.night-config:toml:3.6.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation("gg.essential:Elementa:339-$mcVersion-SNAPSHOT") {
+    implementation("gg.essential:elementa-${mcVersionStr}-${mcPlatform}:347") {
         exclude module: 'kotlin-reflect'
         exclude module: 'kotlin-stdlib-jdk8'
     }
@@ -251,12 +253,7 @@ jar {
 publishing {
     publications {
         maven(MavenPublication) {
-            artifactId = "Vigilance"
-
-            def branchStr = this.properties.getOrDefault("branch", "master") != "master" ? this.properties.getOrDefault("branch", "master") + "-" : ""
-            def fabricStr = FABRIC ? "-fabric" : ""
-            def snapshotStr = this.properties.getOrDefault("IS_CI", false) ? "-SNAPSHOT" : ""
-            version = "$branchStr${project.version}-$mcVersion$fabricStr$snapshotStr"
+            artifactId = "vigilance-$mcVersionStr-$mcPlatform"
 
             pom.withXml {
                 def dependenciesNode = asNode().appendNode('dependencies')
@@ -280,7 +277,7 @@ publishing {
         repositories {
             maven {
                 name 'nexus'
-                url "https://repo.sk1er.club/repository/maven-${this.properties.getOrDefault("IS_CI", false) ? "snapshots" : "releases"}/"
+                url "https://repo.sk1er.club/repository/maven-releases/"
 
                 credentials {
                     username project.nexus_user
