Build: Enable jvm-default compatibility mode for old versions
So we do not break ABI for those. The newer versions never had a stable ABI, so
we can keep the non-compatibility setting there.

--- a/build.gradle
+++ b/build.gradle
@@ -232,7 +232,7 @@ processResources {
 compileKotlin {
     kotlinOptions {
         jvmTarget = mcVersion >= 11700 ? "16" : "1.8"
-        freeCompilerArgs = ["-Xjvm-default=all"]
+        freeCompilerArgs = [mcVersion >= 11400 ? "-Xjvm-default=all" : "-Xjvm-default=all-compatibility"]
     }
 }
 
