--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.9.17"
         if (fabric) {
-            classpath 'fabric-loom:fabric-loom.gradle.plugin:0.8-SNAPSHOT'
+            classpath 'fabric-loom:fabric-loom.gradle.plugin:0.10-SNAPSHOT'
         } else if (mcVersion >= 11400) {
             classpath('net.minecraftforge.gradle:ForgeGradle:5.1.20') { // exact version cause FG tends to break stuff
                 exclude group: 'trove', module: 'trove' // preprocessor/idea requires more recent one
@@ -83,7 +83,7 @@ if (mcVersion >= 11400) {
 }
 
 if (FABRIC) {
-    minecraft {
+    loom {
         runConfigs.all {
             ideConfigGenerated = true
         }
