--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ kotlin.jvmToolchain {
 }
 
 repositories {
+    mavenLocal()
     mavenCentral()
     maven { url 'https://repository.apache.org/content/repositories/releases/org/apache/xmlgraphics/' }
     maven { url 'https://repo.spongepowered.org/maven' }
@@ -159,7 +160,7 @@ dependencies {
     modImplementation('com.electronwill.night-config:toml:3.6.0')
     modImplementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version")
     modImplementation("org.jetbrains.kotlin:kotlin-reflect:$kotlin_version")
-    modApi("gg.essential:elementa-${mcVersionStr}-${mcPlatform}:389") {
+    modApi("gg.essential:elementa-${mcVersionStr}-${mcPlatform}:394+mc-1.18") {
         exclude module: 'kotlin-reflect'
         exclude module: 'kotlin-stdlib-jdk8'
     }
@@ -176,6 +177,7 @@ dependencies {
                 11601: '1.16.1',
                 11602: '1.16.2',
                 11701: '1.17.1',
+                11800: '1.18-pre1',
         ][mcVersion]
         mappings 'net.fabricmc:yarn:' + [
                 11404: '1.14.4+build.16',
@@ -183,14 +185,16 @@ dependencies {
                 11601: '1.16.1+build.17:v2',
                 11602: '1.16.2+build.1:v2',
                 11701: '1.17.1+build.39:v2',
+                11800: '1.18-pre1+build.5:v2',
         ][mcVersion]
-        modImplementation 'net.fabricmc:fabric-loader:0.11.6'
+        modImplementation 'net.fabricmc:fabric-loader:0.12.5'
         def fabricApiVersion = [
                 11404: '0.4.3+build.247-1.14',
                 11502: '0.5.1+build.294-1.15',
                 11601: '0.14.0+build.371-1.16',
                 11602: '0.17.1+build.394-1.16',
                 11701: '0.38.1+1.17',
+                11800: '0.42.1+1.18',
         ][mcVersion]
         def fabricApiModules = [
                 "api-base",
