--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'com.replaymod.preprocess'
 
 kotlin.jvmToolchain {
-    languageVersion = JavaLanguageVersion.of(mcVersion >= 11700 ? 16 : 8)
+    languageVersion = JavaLanguageVersion.of(mcVersion >= 11800 ? 17 : mcVersion >= 11700 ? 16 : 8)
 }
 
 repositories {
@@ -160,7 +160,7 @@ dependencies {
     modImplementation('com.electronwill.night-config:toml:3.6.0')
     modImplementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version")
     modImplementation("org.jetbrains.kotlin:kotlin-reflect:$kotlin_version")
-    modApi("gg.essential:elementa-${mcVersionStr}-${mcPlatform}:394+mc-1.18") {
+    modApi("gg.essential:elementa-${mcVersionStr}-${mcPlatform}:395+mc-1.18") {
         exclude module: 'kotlin-reflect'
         exclude module: 'kotlin-stdlib-jdk8'
     }
@@ -177,7 +177,7 @@ dependencies {
                 11601: '1.16.1',
                 11602: '1.16.2',
                 11701: '1.17.1',
-                11800: '1.18-pre1',
+                11800: '1.18-pre8',
         ][mcVersion]
         mappings 'net.fabricmc:yarn:' + [
                 11404: '1.14.4+build.16',
@@ -185,7 +185,7 @@ dependencies {
                 11601: '1.16.1+build.17:v2',
                 11602: '1.16.2+build.1:v2',
                 11701: '1.17.1+build.39:v2',
-                11800: '1.18-pre1+build.5:v2',
+                11800: '1.18-pre8+build.4:v2',
         ][mcVersion]
         modImplementation 'net.fabricmc:fabric-loader:0.12.5'
         def fabricApiVersion = [
